Add all the required pages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>BudgetAppOnRails</title>
+    <script src="https://kit.fontawesome.com/3656d24b6d.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3656d24b6d.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +13,14 @@
   </head>
 
   <body>
+
+  <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+
+
+ 
+ 
+ 
     <%= yield %>
   </body>
 </html>
