--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,8 +54,6 @@ li {
   text-decoration: none;
 }
 
-
-
 h1,
 h2,
 h3,
@@ -144,51 +142,49 @@ Splash screen
 */
 
 .main-container {
-display: flex;
-align-items: center;
-justify-content: center;
-width: 100vw;
-height: 100vh;
-padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  padding: 2rem;
 }
+
 .splash-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border:  2px solid red;
+  border: 2px solid red;
   margin: 2rem;
   align-self: center;
   justify-self: center;
   width: 100%;
   height: 70%;
   border-radius: 4px;
-  background-color: var(--clr-primary-blue);
-  background: linear-gradient(324deg, rgb(3,169,244) 33%,rgb(189,142,241) 88%)
- }
+  background: linear-gradient(324deg, rgb(3, 169, 244) 33%, rgb(189, 142, 241) 88%);
+}
 
- .splash-container h2{
-font-size: 3rem;
-margin-bottom: 2rem;
- }
-
- .splash-container p{
+.splash-container h2 {
+  font-size: 3rem;
   margin-bottom: 2rem;
-   }
+}
 
- .btn-holder-spl {
+.splash-container p {
+  margin-bottom: 2rem;
+}
+
+.btn-holder-spl {
   display: flex;
   justify-content: space-between;
-  border: 2px solid red;
   width: 60%;
   padding: 2rem;
   border: 1px solid var(--clr-primary-green);
- }
+}
 
- .btn-holder-spl button {
+.btn-holder-spl button {
   padding: 1rem 1.5rem;
-  border: 1px solid var(--clr-primary-green);
- }
+}
 
 
 /*
@@ -197,15 +193,15 @@ Groups/ Index
 ===============
 */
 .transaction-container {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .nav {
   display: flex;
-justify-content: space-between;
+  justify-content: space-between;
   width: 100vw;
   background-color: var(--clr-primary-blue);
   position: fixed;
@@ -215,166 +211,160 @@ justify-content: space-between;
 }
 
 .fa-bars {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .tans-header {
-    color: var(--clr-grey-10);
+  color: var(--clr-grey-10);
 }
 
 .fa-magnifying-glass {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .recent-container {
-    display: flex;
-    width: 100vw;
-    background-color: var(--clr-dark-blue);
-    padding: 0.5rem;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    z-index: 1;
-    top: 5.5rem;
-    justify-content: space-between;
-} 
+  display: flex;
+  width: 100vw;
+  background-color: var(--clr-dark-blue);
+  padding: 0.5rem;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  top: 5.5rem;
+  justify-content: space-between;
+}
 
 .most-recent {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .most-recent h4 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: var(--clr-grey-10);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: var(--clr-grey-10);
 }
 
 .most-recent span {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 0.3rem;
-    height: 0.3rem;
-    background-color: var(--clr-grey-10);
-    border-radius: 0.3rem;
-    position: relative;
-    bottom: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 0.3rem;
+  height: 0.3rem;
+  background-color: var(--clr-grey-10);
+  border-radius: 0.3rem;
+  position: relative;
+  bottom: 0.5rem;
 }
 
 .user-holder {
   margin-left: 1rem;
 }
 
-.user-holder button{
+.user-holder button {
   padding: 0.3rem;
 }
 
 .ancient {
-    color: var(--clr-light-grey);
-    border-radius: 0.3rem;
+  color: var(--clr-light-grey);
+  border-radius: 0.3rem;
 }
 
 .transaction-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-width: 100%;
-position: relative;
-top: 7.3rem;
-left: 0;
-padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: relative;
+  top: 7.3rem;
+  left: 0;
+  padding: 1rem;
 }
 
 .transaction {
-    display: flex;
-width: 100%;
-padding: 1rem;
-background-color: var(--clr-white);
-border-radius: 3px;
-border: 1px solid var(--clr-group-background);
-transition: transform 0.3s ease-out;
-margin-bottom: 1rem;
+  display: flex;
+  width: 100%;
+  padding: 1rem;
+  background-color: var(--clr-white);
+  border-radius: 3px;
+  border: 1px solid var(--clr-group-background);
+  transition: transform 0.3s ease-out;
+  margin-bottom: 1rem;
 }
 
 .link {
-display: inline-block;
-width: 100%;
-height: 100%;
-color: inherit;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  color: inherit;
 }
 
 .transaction:hover {
-    transform: translate(0, -5px);
+  transform: translate(0, -5px);
 }
 
 .transaction img {
-    width: 5rem;
-    height: 5rem;
-    border-radius: 3px;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 3px;
 }
 
 .name {
-    align-self: center;
-    margin-left: 1rem;
+  align-self: center;
+  margin-left: 1rem;
 }
 
-
 .amount {
-   font-size: 1rem;
-   margin-left: auto;
-   align-self: center;
+  font-size: 1rem;
+  margin-left: auto;
+  align-self: center;
 }
 
 .add-catagory {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-background-color: var(--clr-primary-blue);
-padding: 1rem;
-    position: fixed;
-    bottom: 9.3rem;
-    left: 0;
-justify-self: center;
-margin-left: 40%;
-    
-    border-radius: 0.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--clr-primary-blue);
+  padding: 1rem;
+  position: fixed;
+  bottom: 9.3rem;
+  left: 0;
+  justify-self: center;
+  margin-left: 40%;
+  border-radius: 0.3rem;
 }
 
 .scan {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-width: 100vw;
-background-color: var(--clr-primary-green);
-padding: 1.5rem;
-    position: fixed;
-    z-index: 1;
-    bottom: 0;
-    left: 0;
-    
-    border-radius: 0.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  background-color: var(--clr-primary-green);
+  padding: 1.5rem;
+  position: fixed;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  border-radius: 0.3rem;
 }
 
 .scan span {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-border: 2px solid var(--clr-grey-10);
-border-radius: 4px;
-color: var(--clr-grey-10);   
-width: 100%;
-height: 100%;
-padding: 1.5rem;
-font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--clr-grey-10);
+  border-radius: 4px;
+  color: var(--clr-grey-10);
+  width: 100%;
+  height: 100%;
+  padding: 1.5rem;
+  font-size: 2rem;
 }
 
 /*
@@ -387,28 +377,27 @@ Groups/ New
   flex-direction: column;
   align-items: center;
   justify-content: center;
- }
+}
 
- .fa-chevron-left {
+.fa-chevron-left {
   font-size: 2rem;
- }
+}
 
- .new-form {
+.new-form {
   width: 100%;
   position: relative;
   top: 5rem;
- }
+}
 
- .group-form {
+.group-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
- }
+}
 
- 
- .field {
+.field {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -416,12 +405,12 @@ Groups/ New
   width: 100%;
   padding: 1rem;
   color: var(--clr-group-background);
-border: 1px solid var(--clr-group-background);
-font-size: 1rem;
-letter-spacing: 0.1rem;
- }
+  border: 1px solid var(--clr-group-background);
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+}
 
- .submit {
+.submit {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -429,19 +418,15 @@ letter-spacing: 0.1rem;
   width: 100%;
   margin-top: 2rem;
   padding: 1.5rem;
-  color: var(  --clr-blue);
+  color: var(--clr-blue);
   font-size: 1.3rem;
   border: 1px solid var(--clr-group-background);
   background-color: var(--clr-white);
   font-weight: 600;
   transition: transform 0.3s ease-out;
-margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
-
 
 .submit:hover {
   transform: translate(0, -5px);
 }
-
-
-
