--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -1,7 +1,7 @@
 <div class= "main-container">
 <div class= "splash-container">
 <h2>Welcome to BOLO !!</h2>
-<P> whre you can "Be On A Look Out for Your Money"</P>
+<P> where you can "Be On A Look Out for Your Money</P>
 
 
  <% if user_signed_in? %>
