--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -17,17 +17,19 @@
     <div class= "transaction">
         
         <div class= "name" class= "det-name">
-            <h4 class= "amount"><%=group_entity.entity.name%></h4>
-            <h4 class= "date"><%=group_entity.entity.updated_at%></h4>
-            <h4><%="$#{group_entity.entity.amount}"%></h4>
+            <h5 class= "amount"><%=group_entity.entity.name%></h5>
+            <h5 class= "date"><%=group_entity.entity.updated_at%></h5>
+            <h5><%="$#{group_entity.entity.amount}"%></h5>
         </div>
         
     </div>
 
 <%end%>
-<div>
 
-<button class="add-catagory"><%=link_to "Add a New Transaction", "/groups/#{params[:id]}/entities/new"%>
 
-</button>
+<div class="scan">
+        <%=link_to "/groups/#{params[:id]}/entities/new" do %>
+            <span>Add a New Transaction</span>
+        <%end%>
+    </div>
 </div>
